Added render( Color) and render( Rectangle ). Fix getColorValueAsArray to not return black color for null color.